<resources>
    <string name="app_name">MyKloud</string>
    <string name="title">mykloud list</string>
    <string name="list_name" translatable="false">%s</string>
    <string name="add_list_button">Add List</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="priority">Priority</string>
    <string name="cancel">Cancel</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="titleHint" >Title</string>

</resources>