<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:background="@color/white"
    android:minWidth="400dp"
    tools:context=".fragments.CreateListFragment">


    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_task"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:hint="@string/titleHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/header" />


    <TextView
        android:id="@+id/priorityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/priority"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="@id/titleEditText"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/priorityEditText"
        app:layout_constraintTop_toBottomOf="@id/priorityEditText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/square_radio"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:buttonTint="@color/red" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:button="@drawable/square_radio"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:buttonTint="@color/blue" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:button="@drawable/square_radio"
            android:checked="true"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:buttonTint="@color/green" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add"
        android:textColor="@color/add_text_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@id/addButton"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintTop_toTopOf="@id/addButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
